# SCPTS-raiz

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
assets/: style.js
capacitações/: index.html
capacitações/Formulário de Avaliação/form_aval/: index.html
capacitações/Pesquisa de Satisfação/form_aval/: index.html
capacitações/aula_01/aula_01/: index.html
capacitações/aula_02/aula_02/: index.html
capacitações/aula_03/aula_03/: index.html
capacitações/aula_04/aula_04/: index.html
capacitações/aula_05/aula_05/: index.html
capacitações/aula_06/aula_06/: index.html
capacitações/aula_07/aula_07/: index.html
capacitações/aula_08/aula_08/: index.html
capacitações/aula_09/aula_09/: index.html
capacitações/memoriadecalculo/: index.html
docs/: index.md
docs/assets/: style.css  style.js
docs/capacitações/: index.md  memoriadecalculo.md
docs/capacitações/Formulário de Avaliação/: form_aval.md
docs/capacitações/Pesquisa de Satisfação/: form_aval.md
docs/capacitações/aula_01/: aula_01.md
docs/capacitações/aula_02/: aula_02.md
docs/capacitações/aula_03/: aula_03.md
docs/capacitações/aula_04/: aula_04.md
docs/capacitações/aula_05/: aula_05.md
docs/capacitações/aula_06/: aula_06.md
docs/capacitações/aula_07/: aula_07.md
docs/capacitações/aula_08/: aula_08.md
docs/os/: index.md
docs/oscip/: index.md
docs/outrosdocs/: index.md
os/: index.html
oscip/: index.html
outrosdocs/: index.html  modelo_formulário-de-envio-de-proposta.doc
overrides/partials/: comments.html
search/: search_index.json
(+1 files in other folders)
